# political-analyst-database

./: .env  .env.example  .env.example2  .env.integration  .gitignore  Dockerfile  Dockerfile-Override.yml  GITHUB_ISSUE_INTEGRATION.md  INTEGRATION_PLAN.md  Makefile  OPN-Agent-List2.md  OPN-SD1.md  OPN-SD2.md  Personal Knowledge Base Tools and Vectorization.md  Political Document Analysis System Proposal(2).md  README-final.md  README.md  README_Version2.md  README_Version3.md  ai_agent_platform.md  ai_agents_w_legal_analysis.md  architectural_recommendations.md  bundle-analyzer.js  central_settings.py  data_model.py  data_sources.md  doc_scout.py  docker-compose-integration.yml  docker-compose.yml  docker-stack.yml  document-analysis-agent.py  env-setup.py  frontend.js  knowledge-graph-agent.py  knowledge-graph-service.py  mcp_server_architecture.md  n8n-ingestion.json  personal_knowledge_base.md  progress_report.md  pyproject.toml  (+8 more)
.github/: copilot-instructions.md
init_db/: 01-init.sql
kong/: kong.yml
prometheus/: prometheus.yml
src/political_analyst/: __init__.py
src/political_analyst/analysis/: __init__.py  analyzer.py
src/political_analyst/api/: __init__.py  main.py  schemas.py
src/political_analyst/core/: config.py
src/political_analyst/crawling/: __init__.py  crawler.py
src/political_analyst/database/: __init__.py  models.py
src/political_analyst/entities/: __init__.py  extractor.py
src/political_analyst/ingestion/: __init__.py  ingestor.py
src/political_analyst/social_media/: __init__.py  analyzer.py
(+8 files in other folders)
