[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "political-analyst-database"
version = "0.1.0"
description = "A comprehensive political document analysis system with web crawling, vectorization, and knowledge graph capabilities"
authors = [
    {name = "Political Analyst Database Team"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "scrapy>=2.11.0",
    "selenium>=4.15.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "textract>=1.6.5",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "neo4j>=5.14.0",
    "langchain>=0.0.350",
    "openai>=1.3.0",
    "chromadb>=0.4.18",
    "tweepy>=4.14.0",
    "python-twitter-api>=1.1.0",
    "pandas>=2.1.0",
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "celery>=5.3.0",
    "redis>=5.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"